# process-excel

./: .gitignore  README.md  pyproject.toml
src/excel/: agricultural_loss_records.py  convert_xls_to_xlsx.py  file_processor.py  insert_mongodb.py  main.py  merged_cell_range.py  modify_data.py  reacdme.md  user_input.py
