[tool.poetry]
name = "process-excel"
version = "0.1.0"
description = "A tool for batch processing Excel files"
authors = ["rain <wenkunkun@foxmail.com>"]
readme = "README.md"
packages = [
    { include = "excel", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-cli = "excel.main:main"  # 指向 main.py 的 main() 函数
convert = "excel.convert_xls_to_xlsx:main"  