[tool.poetry]
name = "process-excel"
version = "0.1.0"
description = "A tool for batch processing Excel files"
authors = ["rain <wenkunkun@foxmail.com>"]
readme = "README.md"
packages = [
    { include = "excel", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
pandas = "^2.2.3"
pymongo = "^4.13.0"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
process = "excel.file_processor:main"  # 处理文件主流程
convert = "excel.convert_xls_to_xlsx:main"  # 将文件转化为xlsx 解决兼容性问题
insert_mongodb = "excel.insert_mongodb:main"  # 将模版文件导入到数据库中
format = "excel.merged_cell_range:main"  # 格式化模版中单元格问题